# fa-books

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: alembic.ini  main.py  prestart.sh  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 2025_04_26_1942-bedb21a5d3ec_create_users_table.py  2025_04_28_1434-b6ca27e41c1b_create_access_token_table.py  2025_05_04_1441-3e1bfd8918bb_create_books_and_authors_tables.py  2025_05_05_1622-e45b6d54f61c_create_users_table.py  2025_05_05_1836-5f922e50e2e3_add_is_superuser_value_in_users_table.py  2025_05_18_2012-3f3c4706ae9a_create_tables_users_books_authors.py  2025_05_31_1951-77905d3fd2b9_create_users_table.py  2025_06_06_1713-4d4b1aff979a_create_audio_playlist_playlist_audio_.py  f4f803d26442_author_and_books_table.py
app/api/v1/: __init__.py  depends.py
app/api/v1/audio_downloader/: manager.py  routes.py  schemas.py  services.py
app/api/v1/auth/: handlers.py  managers.py  named_tuples.py  routes.py  schemas.py  services.py  tasks.py
app/api/v1/auth/utils/: auth_user_validation.py
app/api/v1/authors/: authors_routes.py  crud.py  dependencies.py  schemas.py
app/api/v1/books/: books_routes.py  crud.py  dependencies.py  schemas.py
app/api/v1/cruds/: author_crud.py  book_crud.py  user_crud.py
app/api/v1/dals/: author_dals.py  book_dals.py  user_dals.py
app/api/v1/dependencies/: author_dependencies.py  books_dependencies.py  user_dependencies.py  users.py
app/api/v1/email/: email_sender.py  main_sender.py
app/api/v1/routers/: authors_router.py  books_router.py  users_router.py
app/api/v1/schemas/: author_schemas.py  book_schemas.py  user_schemas.py
app/api/v1/users/: backend.py  crud.py  dependencies.py  manager.py  schemas.py  users_routes.py
app/api/v1/users/dependencies/: access_tokens.py  strategy.py
app/auth/: auth_user_validation.py  utils.py
app/core/: __init__.py  celery_config.py  settings.py
app/core/models/: __init__.py  access_token.py  audio.py  author.py  author_book_association.py  base.py  book.py  db_helper.py  playlist.py  playlist_audio_association.py  redis_helper.py  user.py
app/core/models/mixins/: id_user_mixin.py  time_stamp_mixins.py
app/templates/: confirmation_email.html
app/utils/: case_converter.py  file_renamer.py
redis-data/: dump.rdb
