[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3
known_first_party = ["app"]
skip = ["migrations", ".venv", "__pycache__"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["app", "tests"]
exclude = ["migrations", ".venv", "__pycache__"]

lint.select = [
  "F",
  "E",
  "W",
  "B",
  "I",
  "C90",
  "UP",
  "SIM",
  "RUF",
]

lint.ignore = [
  "E501",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
strict = true
ignore_missing_imports = true


[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true

[project]
name = "fa-books"
version = "0.1.0"
description = ""
authors = [
    {name = "1",email = "ganz67@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic (==1.15.2)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "argon2-cffi (==23.1.0)",
    "argon2-cffi-bindings (==21.2.0)",
    "async-timeout (==5.0.1)",
    "asyncpg (==0.30.0)",
    "bcrypt (==4.3.0)",
    "black (==25.1.0)",
    "certifi (==2025.1.31)",
    "cffi (==1.17.1)",
    "cfgv (==3.4.0)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "cryptography (==44.0.2)",
    "distlib (==0.3.9)",
    "dnspython (==2.7.0)",
    "ecdsa (==0.19.1)",
    "email-validator (==2.2.0)",
    "exceptiongroup (==1.2.2)",
    "fastapi (==0.115.12)",
    "fastapi-cli (==0.0.7)",
    "filelock (==3.18.0)",
    "greenlet (==3.2.0)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httptools (==0.6.4)",
    "httpx (==0.27.0)",
    "httpx-oauth (==0.16.1)",
    "identify (==2.6.9)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "jinja2 (==3.1.6)",
    "makefun (==1.15.6)",
    "mako (==1.3.10)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==3.0.2)",
    "mdurl (==0.1.2)",
    "mypy-extensions (==1.0.0)",
    "nodeenv (==1.9.1)",
    "orjson (==3.10.16)",
    "packaging (==24.2)",
    "passlib (==1.7.4)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.7)",
    "pluggy (==1.5.0)",
    "pre-commit (==4.2.0)",
    "pwdlib (==0.2.1)",
    "pyasn1 (==0.4.8)",
    "pycparser (==2.22)",
    "pydantic (==2.11.3)",
    "pydantic-settings (==2.8.1)",
    "pydantic-core (==2.33.1)",
    "pygments (==2.19.1)",
    "pyjwt (==2.10.1)",
    "pytest (==8.3.5)",
    "python-dotenv (==1.1.0)",
    "python-jose (==3.4.0)",
    "python-multipart (==0.0.20)",
    "pyyaml (==6.0.2)",
    "rich (==13.7.1)",
    "rich-toolkit (==0.14.1)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.40)",
    "starlette (==0.46.1)",
    "tomli (==2.2.1)",
    "typer (==0.15.2)",
    "typing-inspection (==0.4.0)",
    "typing-extensions (==4.13.2)",
    "uvicorn (==0.34.0)",
    "virtualenv (==20.30.0)",
    "watchfiles (==1.0.5)",
    "websockets (==15.0.1)",
    "celery (>=5.5.2,<6.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "redis (>=6.1.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
